[gd_scene load_steps=11 format=2]

[ext_resource path="res://actors/paddle.tscn" type="PackedScene" id=1]
[ext_resource path="res://actors/ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/game/table.gd" type="Script" id=3]

[sub_resource type="DynamicFontData" id=3]
font_path = "res://fonts/arial.ttf"

[sub_resource type="DynamicFont" id=4]
size = 144
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://fonts/arial.ttf"

[sub_resource type="DynamicFont" id=7]
size = 48
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 6 )

[sub_resource type="ImageTexture" id=5]
size = Vector2( 1280, 720 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 640, 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 360 )

[node name="table" type="Node2D"]
script = ExtResource( 3 )
victory_score = 5

[node name="UI" type="CanvasLayer" parent="."]

[node name="p1_score" type="Label" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 475.0
margin_top = 5.0
margin_right = -645.0
margin_bottom = -553.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1
valign = 1

[node name="p2_score" type="Label" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 645.0
margin_top = 5.0
margin_right = -475.0
margin_bottom = -553.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1
valign = 1

[node name="victory_message" type="Label" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 414.0
margin_top = 228.0
margin_right = -365.0
margin_bottom = -345.0
custom_fonts/font = SubResource( 7 )
text = "Someone has won the game"
align = 1
valign = 1
autowrap = true

[node name="bgame_over" type="Button" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 545.0
margin_top = 449.0
margin_right = -548.0
margin_bottom = -185.0
text = "Okay"

[node name="table_image" type="Sprite" parent="."]
position = Vector2( 640, 360 )
texture = SubResource( 5 )

[node name="paddle" parent="." instance=ExtResource( 1 )]
position = Vector2( 100, 360 )

[node name="paddle2" parent="." instance=ExtResource( 1 )]
position = Vector2( 1180, 360 )
current_controller = 1

[node name="ball" parent="." instance=ExtResource( 2 )]
position = Vector2( 640, 360 )
speed = 600.0

[node name="walls" type="StaticBody2D" parent="."]

[node name="top" type="CollisionShape2D" parent="walls"]
position = Vector2( 640, 0 )
shape = SubResource( 1 )

[node name="bottom" type="CollisionShape2D" parent="walls"]
position = Vector2( 640, 720 )
shape = SubResource( 1 )

[node name="left_goal" type="Area2D" parent="."]

[node name="left_goal_shape" type="CollisionShape2D" parent="left_goal"]
position = Vector2( 0, 360 )
shape = SubResource( 2 )

[node name="right_goal" type="Area2D" parent="."]

[node name="right_goal_shape" type="CollisionShape2D" parent="right_goal"]
position = Vector2( 1280, 360 )
shape = SubResource( 2 )

[node name="divider" type="Line2D" parent="."]
points = PoolVector2Array( 640, 0, 640, 720 )
width = 5.0
default_color = Color( 1, 1, 1, 1 )
texture_mode = 1
begin_cap_mode = 1
end_cap_mode = 2

[connection signal="pressed" from="UI/bgame_over" to="." method="_on_bgame_over_pressed"]
[connection signal="body_entered" from="left_goal" to="." method="_on_left_goal_body_entered"]
[connection signal="body_entered" from="right_goal" to="." method="_on_right_goal_body_entered"]
